[gd_scene load_steps=2 format=3 uid="uid://blrrni2w5qcun"]

[ext_resource type="Script" uid="uid://bthnxtjv4vfkc" path="res://scripts/playground/dialogue.gd" id="1_ubk4p"]

[node name="dialoguebox" type="CanvasLayer"]
script = ExtResource("1_ubk4p")

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 0

[node name="DialogPanel" type="Panel" parent="control"]
clip_contents = true
layout_mode = 0
offset_left = 5.0
offset_top = 191.0
offset_right = 395.0
offset_bottom = 286.0

[node name="MainVBox" type="VBoxContainer" parent="control/DialogPanel"]
layout_mode = 0
offset_right = 390.0
offset_bottom = 184.0
scale = Vector2(1, 0.509109)

[node name="TextScroll" type="ScrollContainer" parent="control/DialogPanel/MainVBox"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 2

[node name="DialogueText" type="RichTextLabel" parent="control/DialogPanel/MainVBox/TextScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 16
fit_content = true
autowrap_mode = 2

[node name="ChoicesVBox" type="VBoxContainer" parent="control/DialogPanel/MainVBox"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 6
